ננו שלי ואני, טוטם

--- a/index.html
+++ b/index.html
@@ -657,6 +657,8 @@ Error message and password prompt
 
 <li>חשמל אבי</li>
 
+<li>טוטם</li>
+
 <li>טוני וספה</li>
 
 <li>טוני סופרנו</li>
@@ -952,6 +954,8 @@ Error message and password prompt
 <li>נולדנו</li>
 
 <li>נטע</li>
+
+<li>ננו שלי ואני</li>
 
 <li>נסענו לאזכרה של אימא</li>
 
@@ -9046,7 +9050,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20181030161624018" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20181107111059046" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181111111041738" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9055,7 +9059,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פלא אוזן]] [[דה וינצ'י 2]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="טוטם [[ננו שלי ואני]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9075,7 +9079,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181108124320788" title="$:/temp/search">
+<div created="20161023184814872" modified="20181118201431613" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12538,6 +12542,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20181114151208287" modified="20181114154007734" tags="[[נאמני הגנזך]] [[אירי וגורה]] [[חלומות שחלמנו]] חבר" title="טוטם">
+<pre>[img[pictures/totem.jpg]]
+
+!!![[הצוות]]:
+
+כל שבט צריך [[טוטם|https://he.wikipedia.org/wiki/%D7%98%D7%95%D7%98%D7%9D]].
+
+</pre>
+</div>
 <div created="20180722161146770" modified="20180722181723910" tags="[[כאן בגטו]] [[חיות אוכל]]" title="טוני וספה">
 <pre>[img[pictures/tony-vespa.jpg]]
 
@@ -14570,6 +14583,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 </pre>
+</div>
+<div created="20181118131210478" modified="20181120121510209" tags="[[כאן בגטו]] אימהות" title="ננו שלי ואני">
+<pre>[img[pictures/nano-ve-ani.jpg]]
+
+!!![[תומר]]:
+
+את יום הולדת שנה של ננו שלי המתוקה, חגגנו באחד בנובמבר בחצר הורי ובלי אימא שפי, שלילה קודם עזבה והמריאה לאמריקה. ידעתי שהיא אמורה לצאת עם חברה לבילוי באותו ערב, ולהישאר ללון אצלה, אבל בבוקר כשקמתי חיכה לי מייל, אותו שלחה רגע לפני ההמראה. היא כתבה שהיא לא יכולה יותר. עברו כמעט שלושה שבועות מאז. טכנית אני מאורגן, אך לבי שבור על ננו שלי הקטנה שמחפשת את אימא.</pre>
 </div>
 <div created="20171026185459428" modified="20180704184357891" tags="[[משפחת באומן]] [[אני רוצה להתנצל]] בתים" title="נסענו לאזכרה של אימא">
 <pre>[img[pictures/haazkara-shel-ima.jpg]] 
@@ -17384,14 +17404,14 @@ Fapina''
 
 //המשך יבוא//</pre>
 </div>
-<div created="20170806142815034" modified="20170907152754710" tags="[[אירי טוענת]]" title="תרגיל לבלטה">
+<div created="20170806142815034" modified="20181111114545954" tags="[[אירי טוענת]]" title="תרגיל לבלטה">
 <pre>[img[pictures/targil-lebalata.jpg]]
 
 !!![[אירי]]:
 
 אני לא אוהבת טכניקה - וטכניקה לא אוהבת אותי, למעט [[טכניקת אלכסנדר|שיטת אלכסנדר]], שדבר ראשון אומרת, להניח לצוואר להיות חופשי.
 
-רקדתי מאז ומתמיד, ולמדתי מחול קלאסי, מחול מודרני, ריקודי עם, כתב תנועה, קומפוזיציה ועוד. הייתה לי מורה לטכניקת [[מרתה גראהם|ספירל]] שקראה לי [[איזדורה דאנקן]]. כשאני מתנועעת, אני נועלת נעלי רחוב עם סוליית גומי, וחושבת אלכסנדרונית. מחשבה שהולכת איתי כבר זמן מה היא, שהמחול נועד לרוקד ולא לצופה.
+רקדתי מאז ומתמיד, [[הורה]], [[דבקה]], [[דעסה|https://www.youtube.com/watch?v=uJqF6r-obdg]]. למדתי בלט קלאסי, מחול מודרני, ריקודי עם, [[כתב תנועה|כתב התנועה אשכול-וכמן]], קומפוזיציה ועוד התנסויות בכל מיני כמו יוגה, טאי-צ'י, פלנדקרייז... הייתה לי מורה לטכניקת [[מרתה גראהם|ספירל]] שקראה לי [[איזדורה דאנקן]]. כשאני מתנועעת, אני נועלת נעלי רחוב עם סוליית גומי, וחושבת אלכסנדרונית. מחשבה שהולכת איתי כבר זמן מה היא, שהמחול נועד לרוקד ולא לצופה.
 
 תמיד אהבתי אטיודים. על תרגיל לבלטה חשבתי לראשונה בהודו, כשגרנו בחדר הקטן, עוד לפני [[הצלילה|מחפשת את אירי]].
 
@@ -17399,7 +17419,7 @@ Fapina''
 
 אפשר עם  או בלי מוזיקה, כפות הרגליים עומדות כל אחת על בלטה, מקבילות זו לזו. הברכיים כפופות מעט ורכות, מפרקי הירך רכים, [[המותנית|צווארים]]. מניחים לצוואר להיות חופשי ומתחילים שני סיבובים, אחד כשרגל ימין נעה קדימה וחוזרת, הצידה ימינה וחוזרת, אחורה וחוזרת, הצידה ימינה וחוזרת (8 פעמות). אחר כך ובאותו אופן ברגל שמאל לצד שמאל.
 
-קל לזכור את התרגיל בדומה לריקודי העם של פעם, כלומר - כמו [[בדבקה|דבקה]] או [[בהורה|הורה]], הטקסט ברור, וכל שנותר הוא להתנועע ולאלתר תוך כדי תנועה.
+קל לזכור את התרגיל בדומה לריקודי העם של פעם, כלומר - ארבעה רבעים, כמו בדבקה או בהורה, הטקסט ברור, וכל שנותר הוא להתנועע ולאלתר תוך כדי תנועה.
 
 כן או לא להעביר את המשקל לרגל המתנועעת, שינוי המהירות, הוספה של תנועת הידיים. כשהטקסט קצר וברור, אפשר להתעמק בתנועה, במקצב, בקצב, בחשיבה התנועתית ועוד.
 
