מחאת הנשים, טל בייגלס, היסטריות

--- a/index.html
+++ b/index.html
@@ -561,6 +561,8 @@ Error message and password prompt
 
 <li>היועצת</li>
 
+<li>היסטריות</li>
+
 <li>הכחול כבר כאן</li>
 
 <li>הכפר הגלובלי</li>
@@ -666,6 +668,8 @@ Error message and password prompt
 <li>טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן</li>
 
 <li>טורט</li>
+
+<li>טל בייגלס</li>
 
 <li>טלפון חכם</li>
 
@@ -876,6 +880,8 @@ Error message and password prompt
 <li>מוזיקה</li>
 
 <li>מוכרת הדיסקים/dj</li>
+
+<li>מחאת הנשים</li>
 
 <li>מחלקים סלולרים</li>
 
@@ -9050,7 +9056,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20181030161624018" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20181111111041738" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181209221151105" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9059,7 +9065,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="טוטם [[ננו שלי ואני]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="היסטריות [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9079,7 +9085,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181118201431613" title="$:/temp/search">
+<div created="20161023184814872" modified="20181209183448066" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10337,7 +10343,7 @@ well,
 אם קורה שאני לא אוכלת בבוקר [[קרואסון|טורט]] כלשהו ושותה [[קפה|הספלים מהם אנו שותים]], אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
 </pre>
 </div>
-<div created="20170811181124336" modified="20181001132633023" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] בתים [[חלומות שחלמנו]] כביסה" title="בבית של פיני">
+<div created="20170811181124336" modified="20181121190225452" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] בתים [[חלומות שחלמנו]] כביסה" title="בבית של פיני">
 <pre>!!![[יויו]]:
 //''''
 לפני כמה ימים [[קיבלנו|האחיות כהן]] מכתב [[מדןדן|דןדן]], אחרי  שלא שמענו ממנו [[שנה בערך|דןדן נסע]]. אני כל כך  אוהב אותו ומתגעגע אליו. באישורו, אני מעתיק לכאן את המכתב:
@@ -11868,6 +11874,20 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 היא רזה מאוד, ובבעלותה חתול מצרי שנמצא אתה כל הזמן. היא נטשה קריירה בעסקי הנדל&quot;ן שלא הייתה לטובת &quot;האור&quot;.  גרושה גועל נפש.</pre>
 </div>
+<div created="20181209191626889" modified="20181209221624294" tags="[[אירי וגורה]]" title="היסטריות">
+<pre>[img[pictures/histeriyot.jpg]]
+
+!!![[אירי וגורה]]:
+
+אנחנו מדמיינות את פניו של [[היפוקרטס|https://he.wikipedia.org/wiki/%D7%94%D7%99%D7%A4%D7%95%D7%A7%D7%A8%D7%98%D7%A1]], תוך שידו נעה בתנועת ביטול, אומר לתלמידיו, שזה עתה נשבעו בשבועתו:
+עזבו אותן אלה, סתם היסטריות.
+
+כנראה שאנחנו לא סתם היסטריות, שכן רחמים שוכנים אצלינו בבטנים.
+
+כן אתם -  מכונות הרג, חיסול וביטול כל מה שלא בא לכם טוב בעיניים - [[נאמר לכם שוב|הכפר הגלובלי]] ושוב ושוב - לא עוד!
+
+</pre>
+</div>
 <div created="20170916144114074" modified="20171029224649088" tags="[[סיפורים אמיתיים]]" title="הכחול כבר כאן">
 <pre>[img[pictures/hacachol-cvar-can.jpg]]
 
@@ -12297,7 +12317,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני אוהבת את [[וס אנדרסון|http://www.imdb.com/name/nm0027572/]], כי תמיד הוא מצחיק אותי, ומשמח אותי. כל פריים שלו כמעט מפתיע, מלא דימיון, יפה, חכם וסימטרי - שזה הכי חשוב.</pre>
 </div>
-<div created="20161112221314170" modified="20181020120746571" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
+<div created="20161112221314170" modified="20181121183813748" tags="[[אחות כהן]] אימהות" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
 ''
 המתוקה''
@@ -12622,6 +12642,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 הבוקר שמתי קצת יותר מידי פקאנים (זה היה סוף הקופסה, אז השתמשתי בכל מה שהיה, וזה היה קצת יותר ממה שצריך). את הפקאנים ערבבתי עם מעט סוכר וקנמון טחון אותם בחשתי בקלות פנימה. אחרי האפיה במקום להרטיב עם מיץ תפוזים השתמשתי בחמש כפות סירופ מייפל.
 
 </pre>
+</div>
+<div created="20181209115549031" modified="20181209213703157" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]]" title="טל בייגלס">
+<pre>[img[pictures/tal-bagels.jpg]]
+
+!!![[תומר]]:
+
+ישנם הימים בהם אני יוצא מהבית, חוצה את החשמונאים, ויורד דרך קריית ספר לפינת קרליבך 41, שם בהחלט נמצא מקום שאפשר לקרוא לו מוסד. הבייגלס תמיד טריים וטעימים, וכך גם הסלטים, המאפים, הקפה, המיץ. לשבת או לקחת. הבייתה או לפיקניק. 
+
+כיתבו [[טל בייגלס|http://www.tal-bagels.co.il/index.php]] בנווטן, ותגיעו לדירה שלנו בצורה המיטבית -  זה מה שאני אומר למי שרוצה לבוא לבקר אותנו. </pre>
 </div>
 <div created="20181006124035047" modified="20181006132141881" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]] [[מטא בדיון]]" title="טלפון חכם">
 <pre>[img[pictures/smart-phone.jpg]]
@@ -14082,6 +14111,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היאת [[והספרית|הספרית]] הן המבוגרות האחראיות בסיפור.
 </pre>
+</div>
+<div created="20181209170135890" modified="20181209220854495" tags="[[כאן בגטו]]" title="מחאת הנשים">
+<pre>[img[pictures/mechaat-hanashim.jpg]]
+
+!!![[תומר]]:
+
+אחרי שבצהריים ראינו את [[ג'אז|jazz]] שרה בארועי המחאה ברוטשילד, הגיע הערב, ארזתי טוב טוב את [[ננו הקטנה|ננו שלי ואני]], והצטרפנו למחאת הבוערת של הנשים, אלה ששמות לב לכל פרט, ואירגנו הפגנה למופת. את המילים אני משאיר [[לבנות|היסטריות]]</pre>
 </div>
 <div created="20170425201738858" modified="20170501201434028" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
 <pre>[img[pictures/mechalkim-nayadim.jpg]]
@@ -15993,7 +16029,7 @@ __אופן ההכנה____
 6. את משחת הכבד מוזגים לכלי הגשה או לתוך תבנית אנגליש מרופדת בניילון נצמד, אוטמים ומניחים במקרר ל 6 שעות לפחות.
 </pre>
 </div>
-<div created="20170401151233604" modified="20170528151211923" tags="[[אחות כהן]]" title="פיליפ">
+<div created="20170401151233604" modified="20181121194748471" tags="[[אחות כהן]]" title="פיליפ">
 <pre>[img[pictures/phillip.jpg]]
 
 !!![[גורה]]:
