--- a/index.html
+++ b/index.html
@@ -9056,7 +9056,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20181030161624018" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20181209221151105" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181209222745872" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9065,7 +9065,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="היסטריות [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות בלות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11619,12 +11619,12 @@ different tastes, but there were things we both love: family, work, people in al
 K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
-<div created="20180731155632659" modified="20180814103422260" tags="" title="האחיות בלות">
+<div created="20180731155632659" modified="20181209223625029" tags="" title="האחיות בלות">
 <pre>[img[pictures/bloot-sisters.jpg]]
 
 !!![[אווה]]:
 
-בשעות אחר הצהריים המאוחרות של ימי רביעי, [[ז'נבייב]], [[סוניה]] ואני נפגשות לארוחה ומשקה ולהיפך, ומשוחחות להנאתנו.
+בשעות אחר הצהריים המאוחרות של ימי רביעי, [[ז'נבייב]], [[סוניה]] ואני נפגשות לארוחה ומשקה ולהיפך, ומשוחחות להנאתנו, 
 
 
 
@@ -11874,7 +11874,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 היא רזה מאוד, ובבעלותה חתול מצרי שנמצא אתה כל הזמן. היא נטשה קריירה בעסקי הנדל&quot;ן שלא הייתה לטובת &quot;האור&quot;.  גרושה גועל נפש.</pre>
 </div>
-<div created="20181209191626889" modified="20181209221624294" tags="[[אירי וגורה]]" title="היסטריות">
+<div created="20181209191626889" modified="20181209222241781" tags="[[אירי וגורה]] [[קופים ממונעים]] [[בחוות החיות]] [[האחיות בלות]] [[מטא בדיון]]" title="היסטריות">
 <pre>[img[pictures/histeriyot.jpg]]
 
 !!![[אירי וגורה]]:
