--- a/index.html
+++ b/index.html
@@ -9065,7 +9065,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות בלות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[טל בייגלס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11874,13 +11874,15 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 היא רזה מאוד, ובבעלותה חתול מצרי שנמצא אתה כל הזמן. היא נטשה קריירה בעסקי הנדל&quot;ן שלא הייתה לטובת &quot;האור&quot;.  גרושה גועל נפש.</pre>
 </div>
-<div created="20181209191626889" modified="20181209222241781" tags="[[אירי וגורה]] [[קופים ממונעים]] [[בחוות החיות]] [[האחיות בלות]] [[מטא בדיון]]" title="היסטריות">
+<div created="20181209191626889" modified="20181210090916966" tags="[[אירי וגורה]] [[קופים ממונעים]] [[בחוות החיות]] [[האחיות בלות]] [[מטא בדיון]]" title="היסטריות">
 <pre>[img[pictures/histeriyot.jpg]]
 
 !!![[אירי וגורה]]:
 
 אנחנו מדמיינות את פניו של [[היפוקרטס|https://he.wikipedia.org/wiki/%D7%94%D7%99%D7%A4%D7%95%D7%A7%D7%A8%D7%98%D7%A1]], תוך שידו נעה בתנועת ביטול, אומר לתלמידיו, שזה עתה נשבעו בשבועתו:
-עזבו אותן אלה, סתם היסטריות.
+
+//עזבו אותן אלה, סתם היסטריות.
+//
 
 כנראה שאנחנו לא סתם היסטריות, שכן רחמים שוכנים אצלינו בבטנים.
 
@@ -14112,12 +14114,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היאת [[והספרית|הספרית]] הן המבוגרות האחראיות בסיפור.
 </pre>
 </div>
-<div created="20181209170135890" modified="20181209220854495" tags="[[כאן בגטו]]" title="מחאת הנשים">
+<div created="20181209170135890" modified="20181210090806992" tags="[[כאן בגטו]] אימהות" title="מחאת הנשים">
 <pre>[img[pictures/mechaat-hanashim.jpg]]
 
 !!![[תומר]]:
 
-אחרי שבצהריים ראינו את [[ג'אז|jazz]] שרה בארועי המחאה ברוטשילד, הגיע הערב, ארזתי טוב טוב את [[ננו הקטנה|ננו שלי ואני]], והצטרפנו למחאת הבוערת של הנשים, אלה ששמות לב לכל פרט, ואירגנו הפגנה למופת. את המילים אני משאיר [[לבנות|היסטריות]]</pre>
+אחרי שבצהריים ראינו את [[ג'אז|jazz]] שרה בארועי המחאה ברוטשילד, הגיע הערב. ארזתי טוב טוב את [[ננו הקטנה|ננו שלי ואני]], והלכנו לככר רבין, שם המשיכה המחאה הבוערת של הנשים, (אלה [[ששמות לב|היסטריות]] לכל פרט). הן אירגנו הפגנה מקסימה ולמופת. </pre>
 </div>
 <div created="20170425201738858" modified="20170501201434028" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
 <pre>[img[pictures/mechalkim-nayadim.jpg]]
