--- a/index.html
+++ b/index.html
@@ -815,6 +815,8 @@ Error message and password prompt
 
 <li>ליל הסדר אצל אבא ותרצה</li>
 
+<li>לילה בדצמבר</li>
+
 <li>לילי</li>
 
 <li>לילי 01</li>
@@ -9056,7 +9058,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20181030161624018" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20181209222745872" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20181217231431868" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9065,7 +9067,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[טל בייגלס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[לילה בדצמבר]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9085,7 +9087,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181209183448066" title="$:/temp/search">
+<div created="20161023184814872" modified="20181215141014470" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13759,6 +13761,46 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <pre>[img[pictures/lel-haseder-ezel-aba.jpg]]
 
 אלפרד נשאר לשמור על הבית. אנג'ליק, אירי, גורה ואני נסענו לשמח את ההורים. נהננו מהאביב היפה והרוח הנעימה. אבא בנה  צריף מאד יפה בחצר. כל המשפחה הגיעה כולל שני בניה של תרצה. היה הרבה מאד אוכל וללא ספק אפשר להגיד שכמות הטבעוניים הולכת וגדולה מה שגרם לתרצה להכין [[כמולונז]] אותו אימצנו.</pre>
+</div>
+<div created="20181216161518706" modified="20181217231750726" tags="[[כאן בגטו]] מוזיקה" title="לילה בדצמבר">
+<pre>[img[pictures/layla-kan.jpg]]
+
+!!![[תומר]]:
+
+החלה רוח שורקת אלף מנגינות
+
+חצר פניה מליטה, עוצרת את נשימתה
+
+כי בא אורח.
+
+הסהר מעגל את פיו
+
+במן חיוך כל כך חביב
+
+ומסתרק
+
+- &quot;אתה קירח&quot;
+
+אומר הלילה וצוחק.
+
+
+[[הלילה הזה|https://www.youtube.com/watch?v=cG_chE9vWnE]],
+
+שום סימן הוא לא נותן.
+
+הוא מעוור, הוא מכוון
+
+את התנועה בשלל גחליליות.
+
+הוא מספר מעשיות
+
+והוא חושב שילדים מאמינים לזה,
+
+מן לילה שכזה,
+
+כזה. 
+
+[[שלום חנוך]]</pre>
 </div>
 <div created="20171219223133813" modified="20180704184054101" tags="[[מטא בדיון]] [[ילדים חד הוריים]] [[סיפורים אמיתיים]] בתים" title="לילי">
 <pre>[img[pictures/lily.jpg]]
