--- a/index.html
+++ b/index.html
@@ -1135,6 +1135,8 @@ Error message and password prompt
 
 <li>רביזיה במטבח</li>
 
+<li>רדיו epgb</li>
+
 <li>רוז'ה</li>
 
 <li>רוטב בשאמל</li>
@@ -9067,7 +9069,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לילה בדצמבר]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[רדיו epgb]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9087,7 +9089,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181215141014470" title="$:/temp/search">
+<div created="20161023184814872" modified="20181222130827860" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -16643,6 +16645,13 @@ Fapina''
 
 
 </pre>
+</div>
+<div created="20181223141707382" modified="20181225172936467" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="רדיו epgb">
+<pre>[img[pictures/radio-epgb.jpg]]
+
+!![[תומר]]:
+
+אני אוהב מקומות סמויים מן העין, שנפתחים רק כשכבר חשוך, כמו [[הרדיו|https://www.timeout.com/israel/nightlife/radio-epgb]], שנמצא בשד&quot;ל 7. נכנסים ויורדים לבר החשוך והטוב, ולמוזיקה המזיזה והנוגעת, ולאווירה. אם זה קורה בימי שלישי תהנו מליין קטלן [[שג'אז|jazz]], שאני, כידוע, גרופי שלה, אחראית עליו ומופיעה בו - וגם בשאר הימים [[שווה לבדוק|https://www.tripadvisor.com/Attraction_Review-g293984-d3584847-Reviews-Radio_E_P_G_B-Tel_Aviv_Tel_Aviv_District.html]].</pre>
 </div>
 <div created="20161115145921007" modified="20171029224729021" tags="[[אחות כהן]]" title="רוז'ה">
 <pre>[img[pictures/5VdqSTjL1ficmZ1K.jpg]]
