אכרם חומוס, הדשא

--- a/index.html
+++ b/index.html
@@ -351,6 +351,8 @@ Error message and password prompt
 
 <li>איתן וג'ואל כהן</li>
 
+<li>אכרם חומוס</li>
+
 <li>אלכסנדרה</li>
 
 <li>אלן בול</li>
@@ -538,6 +540,8 @@ Error message and password prompt
 <li>הגשר</li>
 
 <li>הדוד האמיתי</li>
+
+<li>הדשא</li>
 
 <li>הדשא של השכן</li>
 
@@ -9060,7 +9064,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20181030161624018" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20181217231431868" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190105113209044" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9069,7 +9073,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[רדיו epgb]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כאן בגטו]] פרינס הדשא [[אכרם חומוס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9089,7 +9093,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20181222130827860" title="$:/temp/search">
+<div created="20161023184814872" modified="20190106153138987" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10102,6 +10106,14 @@ well,
 
 
 
+</pre>
+</div>
+<div created="20190105113035895" modified="20190106174340489" tags="[[כאן בגטו]] [[חיות אוכל]] מסעדות" title="אכרם חומוס">
+<pre>[img[pictures/acram-humus.jpg]]
+
+!!![[תומר]]:
+
+בירידה מרוטשילד, בשיינקין 59, בבוקר, אכרם, חמודי וג'וני, מחכים עם חיוך, עם החומוס החם והפלאפל הטוב, לדרים בסביבה וברחוב.
 </pre>
 </div>
 <div created="20170331205112322" modified="20180510194317312" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלכסנדרה">
@@ -11736,6 +11748,17 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 !!![[יויו]]:
 
 כש[[הדוד|https://thedod.github.io#עברית]], שכדאי מאד להקשיב למה שיש לו להגיד, הגיע אלינו, די מהר, הכל התחיל להסתדר במקום. 
+
+</pre>
+</div>
+<div created="20190105112836262" modified="20190106174306670" tags="[[סיפורים אמיתיים]] [[כאן בגטו]]" title="הדשא">
+<pre>[img[pictures/hadeshe.jpg]]
+
+[[אימא של ג'אז]]:
+
+הדשא אחרי הגשם, ירוק ירוק.
+
+
 
 </pre>
 </div>
