--- a/index.html
+++ b/index.html
@@ -9073,7 +9073,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כאן בגטו]] פרינס הדשא [[אכרם חומוס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="הדשא [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11751,12 +11751,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20190105112836262" modified="20190106174306670" tags="[[סיפורים אמיתיים]] [[כאן בגטו]]" title="הדשא">
+<div created="20190105112836262" modified="20190106181220068" tags="[[סיפורים אמיתיים]] [[כאן בגטו]]" title="הדשא">
 <pre>[img[pictures/hadeshe.jpg]]
 
 [[אימא של ג'אז]]:
 
-הדשא אחרי הגשם, ירוק ירוק.
+הדשא אחרי גשם, ירוק ירוק.
 
 
 
