--- a/index.html
+++ b/index.html
@@ -9073,7 +9073,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="הדשא [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אכרם חומוס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10108,12 +10108,12 @@ well,
 
 </pre>
 </div>
-<div created="20190105113035895" modified="20190106181041596" tags="[[כאן בגטו]] [[חיות אוכל]] מסעדות" title="אכרם חומוס">
+<div created="20190105113035895" modified="20190106185649488" tags="[[כאן בגטו]] [[חיות אוכל]] מסעדות" title="אכרם חומוס">
 <pre>[img[pictures/acram-humus.jpg]]
 
 !!![[תומר]]:
 
-בירידה מרוטשילד, [[בשיינקין 59|https://www.google.co.il/maps/uv?hl=en&amp;pb=!1s0x151d4b7e8db95f5f:0x3662145826c17cb6!2m22!2m2!1i80!2i80!3m1!2i20!16m16!1b1!2m2!1m1!1e1!2m2!1m1!1e3!2m2!1m1!1e5!2m2!1m1!1e4!2m2!1m1!1e6!3m1!7e115!4shttps://lh5.googleusercontent.com/p/AF1QipMFFlj1e4GWNWYyh4WV9xERQb5ic8WeueoQwqki%3Dw213-h160-k-no!5z15DXm9eo150g15fXldee15XXoSAtIEdvb2dsZSBTZWFyY2g&amp;imagekey=!1e10!2sAF1QipMFFlj1e4GWNWYyh4WV9xERQb5ic8WeueoQwqki&amp;sa=X&amp;ved=2ahUKEwjRxtmgvtnfAhUNxxoKHTlkAUkQoiowCnoECAYQBg]], בבוקר, אכרם, חמודי וג'וני, מחכים עם חיוך, עם החומוס, מרק חם, ופלאפל טוב, לדרים בסביבה וברחוב.
+בירידה מרוטשילד, [[בשיינקין 59|https://www.google.co.il/maps/uv?hl=en&amp;pb=!1s0x151d4b7e8db95f5f:0x3662145826c17cb6!2m22!2m2!1i80!2i80!3m1!2i20!16m16!1b1!2m2!1m1!1e1!2m2!1m1!1e3!2m2!1m1!1e5!2m2!1m1!1e4!2m2!1m1!1e6!3m1!7e115!4shttps://lh5.googleusercontent.com/p/AF1QipMFFlj1e4GWNWYyh4WV9xERQb5ic8WeueoQwqki%3Dw213-h160-k-no!5z15DXm9eo150g15fXldee15XXoSAtIEdvb2dsZSBTZWFyY2g&amp;imagekey=!1e10!2sAF1QipMFFlj1e4GWNWYyh4WV9xERQb5ic8WeueoQwqki&amp;sa=X&amp;ved=2ahUKEwjRxtmgvtnfAhUNxxoKHTlkAUkQoiowCnoECAYQBg]], בבוקר, אכרם, חמודי וג'וני, לפעמים פוטנה גם, מחכים עם חיוך, עם החומוס, מרק חם, ופלאפל טוב, לדרים בסביבה וברחוב.
 </pre>
 </div>
 <div created="20170331205112322" modified="20180510194317312" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלכסנדרה">
