--- a/index.html
+++ b/index.html
@@ -9073,7 +9073,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אכרם חומוס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[איזדורה דאנקן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9093,7 +9093,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190106153138987" title="$:/temp/search">
+<div created="20161023184814872" modified="20190109182109882" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9947,13 +9947,13 @@ well,
 
 </pre>
 </div>
-<div created="20170731120559711" modified="20180720111748516" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="איזדורה דאנקן">
+<div created="20170731120559711" modified="20190109182106011" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="איזדורה דאנקן">
 <pre>[img[pictures/isadora-duncan.jpg]]
 
 !!![[אירי]]:
 
 
-[[איזדורה דאנקן|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%96%D7%93%D7%95%D7%A8%D7%94_%D7%93%D7%90%D7%A0%D7%A7%D7%9F]] לא אהבה את קשיחות הטכניקה של המחול הקלאסי, ואת התכחשותו לכח הכבידה. היא טענה כי הוא מגביל את יכולת הביטוי שלה. היא הסירה את נעלי הריקוד, ונתנה לתנועות ולקשר עם האדמה לקחת את הגוף - וכל זה בתחילת המאה ה-20, וזה עוד לפני הזכרנו את חייה האישיים של האישה המהפכנית הזו.
+[[איזדורה דאנקן|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%96%D7%93%D7%95%D7%A8%D7%94_%D7%93%D7%90%D7%A0%D7%A7%D7%9F]] לא אהבה את קשיחות הטכניקה של המחול הקלאסי, ואת התכחשותו לכח הכבידה. היא טענה כי הוא מגביל את יכולת הביטוי שלה. היא הסירה את נעלי הריקוד, ונתנה לתנועות ולקשר עם האדמה לקחת את הגוף - וכל זה בתחילת המאה ה-20, וזה עוד לפני שהזכרנו את חייה האישיים של האישה המהפכנית הזו.
 
 </pre>
 </div>
