מזנון, יהודית רביץ, סרטים, רקפות

--- a/index.html
+++ b/index.html
@@ -681,6 +681,8 @@ Error message and password prompt
 
 <li>יה</li>
 
+<li>יהודית רביץ</li>
+
 <li>יהונתן גפן</li>
 
 <li>יויו</li>
@@ -887,6 +889,8 @@ Error message and password prompt
 
 <li>מוכרת הדיסקים/dj</li>
 
+<li>מזנון</li>
+
 <li>מחאת הנשים</li>
 
 <li>מחלקים סלולרים</li>
@@ -1010,6 +1014,8 @@ Error message and password prompt
 <li>ספייק לי</li>
 
 <li>ספירל</li>
+
+<li>סרטים</li>
 
 <li>עוגות תאנים</li>
 
@@ -1156,6 +1162,8 @@ Error message and password prompt
 <li>ריחות</li>
 
 <li>רן יגיל</li>
+
+<li>רקפות</li>
 
 <li>שאלון האחיות</li>
 
@@ -9061,10 +9069,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20181030161624018" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20190204105515128" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20190105113209044" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190204174956752" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9073,7 +9081,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[איזדורה דאנקן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9093,7 +9101,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190109182109882" title="$:/temp/search">
+<div created="20161023184814872" modified="20190204174942849" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10095,7 +10103,7 @@ well,
 
 איריס בתה של [[אווה]], והיא ילדה זרחנית. זורחת באור ובחושך.</pre>
 </div>
-<div created="20170415200315789" modified="20171225144702602" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
+<div created="20170415200315789" modified="20190126101744795" tags="[[אחיות חוץ]] סרטים" title="איתן וג'ואל כהן">
 <pre>[img[pictures/cohen-brothers.jpg]]
 
 !!![[גורה]]:
@@ -10123,7 +10131,7 @@ well,
 
 ביתה הבכורה של [[ז'נבייב]]. היא ילידת 1995, ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
 </div>
-<div created="20180218104549044" modified="20180405183210382" tags="[[אחיות חוץ]]" title="אלן בול">
+<div created="20180218104549044" modified="20190126101817950" tags="[[אחיות חוץ]] סרטים סדרות" title="אלן בול">
 <pre>[img[pictures/alan-ball.jpg]]
 
 !!![[גורה]]:
@@ -10422,7 +10430,7 @@ well,
 
 </pre>
 </div>
-<div created="20171212171900725" modified="20180405182459936" title="ביג לבובסקי">
+<div created="20171212171900725" modified="20190126101854251" tags="סרטים" title="ביג לבובסקי">
 <pre>[img[pictures/the-big-lebowski.jpg]]
 
 !!![[יויו]]:
@@ -10570,7 +10578,7 @@ Is where I want to be
 
 כשאלפרד ואני היינו יחד, ונסענו ליער ונפצעתי, ג'וזף דאג לי ולהכל לאורך כל הדרך, ומאז כולנו חיים באושר ועושר.</pre>
 </div>
-<div created="20170415192146343" modified="20170416220602068" tags="[[אחיות חוץ]]" title="ג'ון אירווינג">
+<div created="20170415192146343" modified="20190126101923677" tags="[[אחיות חוץ]] סרטים" title="ג'ון אירווינג">
 <pre>[img[pictures/john-irving.jpg]]
 
 !!![[גורה]]:
@@ -10584,7 +10592,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20171216174635678" modified="20171225144805289" tags="[[אחיות חוץ]]" title="ג'ון גודמן">
+<div created="20171216174635678" modified="20190126102011900" tags="[[אחיות חוץ]] סרטים סדרות" title="ג'ון גודמן">
 <pre>[img[pictures/john-goodman.jpg]]
 
 !!![[יויו]]:
@@ -10614,14 +10622,14 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170829074025058" modified="20170924205211794" tags="[[אחיות חוץ]] הסופרנוס" title="ג'יימס גנדולפיני">
+<div created="20170829074025058" modified="20190126102035599" tags="[[אחיות חוץ]] הסופרנוס סדרות סרטים" title="ג'יימס גנדולפיני">
 <pre>[img[pictures/james-gandolfini.jpg]]
 
 [[ג'יימס גנדולפיני|http://www.imdb.com/name/nm0001254/]] האהוב, שנתן את כל כולו.
 
 </pre>
 </div>
-<div created="20181003131016162" modified="20181004083319203" tags="[[האחיות בלות]] [[אחיות חוץ]]" title="ג'יין פונדה">
+<div created="20181003131016162" modified="20190126102054297" tags="[[האחיות בלות]] [[אחיות חוץ]] סרטים" title="ג'יין פונדה">
 <pre>[img[pictures/jane-fonda.jpg]]
 
 !!![[אווה]]:
@@ -10637,7 +10645,7 @@ Is where I want to be
 
 [[מהתמונה הזו|https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTU1MTA5MjA5NjczODM1ODg2/photo-by-tibrina-hobson-getty-images-square.jpg]] ציירה גורה את ג'יין.</pre>
 </div>
-<div created="20171212163308820" modified="20171216175004697" tags="[[אחיות חוץ]]" title="ג'ף ברידג'ס">
+<div created="20171212163308820" modified="20190126102112115" tags="[[אחיות חוץ]] סרטים" title="ג'ף ברידג'ס">
 <pre>[img[pictures/jeff-bridges.jpg]]
 
 !!![[יויו]]:
@@ -11427,7 +11435,7 @@ Is where I want to be
 
 זה לא כל כך נעים לראות רדיו סגור, אבל כשאתה מתגורר כאן בגטו  לפעמים דה וינצ'י 2 זה בדרך, ואני רגשן [[מתגעגע|https://www.youtube.com/watch?v=SPg4IwGZMvM]].</pre>
 </div>
-<div created="20170105154405192" modified="20180720110331942" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה" title="דיוויד בואי">
+<div created="20170105154405192" modified="20190126102153255" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה סרטים" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
 
 !!![[אירי]]:
@@ -11447,7 +11455,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20180123164835249" modified="20180208153859100" tags="[[אחיות חוץ]] מוזיקה" title="דיוויד ביירן">
+<div created="20180123164835249" modified="20190126102217946" tags="[[אחיות חוץ]] מוזיקה סרטים" title="דיוויד ביירן">
 <pre>[img[pictures/david-byrne.jpg]]
 
 !!![[יויו]]:
@@ -11712,7 +11720,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170918121843399" modified="20170918122618754" tags="[[אחיות חוץ]]" title="הארי דין סטנטון">
+<div created="20170918121843399" modified="20190126102437756" tags="[[אחיות חוץ]] סרטים" title="הארי דין סטנטון">
 <pre>[img[pictures/harry-dean-stanton.jpg]]
 
 !!![[יויו]]:
@@ -12339,7 +12347,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170728103845790" modified="20170729113309655" tags="[[אחיות חוץ]]" title="וס אנדרסון">
+<div created="20170728103845790" modified="20190126102555354" tags="[[אחיות חוץ]] סרטים" title="וס אנדרסון">
 <pre>[img[pictures/wes-anderson.jpg]]
 
 !!![[גורה]]:
@@ -12704,6 +12712,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא עושה תואר שני במדעי החיים אבל בשילוב עם מדעי הנפש, ועובדת בספריה של האוניברסיטה, וגם כמתרגלת במעבדה.
 
 התחברנו ממש, והיא אחות.</pre>
+</div>
+<div created="20190124084102212" modified="20190204190331034" tags="[[אחיות חוץ]] מוזיקה [[כאן בגטו]] [[מטא בדיון]]" title="יהודית רביץ">
+<pre>[img[pictures/yehudit-ravitz.jpg]]
+
+!!![[תומר]]:
+
+היום ברחוב, [[חלפה|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%93%D7%99%D7%AA_%D7%A8%D7%91%D7%99%D7%A5]] על פני [[הזמרת|https://www.youtube.com/watch?v=lt_C-vcDdU8]] הנפלאה באופן קבוע, [[והמוזיקאית|https://www.youtube.com/watch?v=YVQvOvlEcDM]] החד פעמית והיפה הזו, שאני כל כך אוהב ומעריך. שמץ של מבוכה והקסם בחיוכה, אומרים [[שהיא באה מאהבה|https://www.youtube.com/watch?v=zUNPxTNxVoc]] ועוד המון.
+
+</pre>
 </div>
 <div created="20180325134055236" modified="20180326104222630" tags="[[אחיות חוץ]] מוזיקה" title="יהונתן גפן">
 <pre>[img[pictures/yonatan-gefen.jpg]]
@@ -13547,7 +13564,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170512204903436" modified="20170512210230824" tags="פעם" title="כשהיו בתי קולנוע">
+<div created="20170512204903436" modified="20190126102655810" tags="פעם סרטים" title="כשהיו בתי קולנוע">
 <pre>''גם בהם עישנו''
 
 [img[pictures/csheishnoo-bakolnoa.jpg]]</pre>
@@ -14181,6 +14198,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היאת [[והספרית|הספרית]] הן המבוגרות האחראיות בסיפור.
 </pre>
 </div>
+<div created="20190204104349203" modified="20190204192833272" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]]" title="מזנון">
+<pre>[img[pictures/miznon.jpg]]
+
+[[תומר]]:
+
+[[המזנון|https://miznon.com/]] שבתמונה, נמצא בקינג ג'ורג' 30, לא רחוק [[מ-420|420]] האהובה. לא הייתי באלה שבחו&quot;ל, וגם לא ברמת החייל, אבל הייתי לא פעם בסניף של אבן גבירול. הכל מאד טעים בפיתה ובמחיר הגיוני. אני הכי אוהב את כבדי התרנגולת או את מסבחת הלימה. [[ננו שלי|ננו שלי ואני]] אוהבת שורת בננות. יאמי מאד במזנונים של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]], ויש גם תפוח אדמה דרוס, גזוז או שפריץ, [[ועוד בתפריט|https://miznon.com/menu]], ומוזיקה, ועובדים מקסימים בקופה או במטבחים הפתוחים .. תענוג שהוא חובה.</pre>
+</div>
 <div created="20181209170135890" modified="20181210090806992" tags="[[כאן בגטו]] אימהות" title="מחאת הנשים">
 <pre>[img[pictures/mechaat-hanashim.jpg]]
 
@@ -14241,7 +14265,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180824161744105" modified="20180824164612750" tags="[[אחיות חוץ]]" title="מייק לי">
+<div created="20180824161744105" modified="20190126102740838" tags="[[אחיות חוץ]] סרטים" title="מייק לי">
 <pre>[img[pictures/mike-leigh.jpg]]
 
 !!![[גורה]]:
@@ -14268,7 +14292,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 הקיר הצפוני של המפעל הוא מקום בו הנוער נוהג לצייר [[גרפיטי|לצייר גרפיטי וירטואלי במִיצְפֶּרֶש]]. משה מוכר פוטאג' של מצלמות האבטחה שם לסטארטאפים של [[זיהוי ביומטרי|https://no2bio.org]]. יש לו חוש טבעי לתאורת אינפרא אדום דרמטית. רבים בתעשיה הבטחונית רואים במשה אמן וידאו אלטרנטיבי.</pre>
 </div>
-<div created="20170614165341450" modified="20180208153645445" tags="[[אחיות חוץ]] מוזיקה" title="מישל גונדרי">
+<div created="20170614165341450" modified="20190126104028190" tags="[[אחיות חוץ]] מוזיקה סרטים" title="מישל גונדרי">
 <pre>[img[pictures/michel-gondry.jpg]]
 
 !!![[ראשל]]:
@@ -14749,12 +14773,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170711173812724" modified="20180704182113610" tags="" title="סדרות">
+<div created="20170711173812724" modified="20190126101106045" tags="" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
 
 !!![[יויו]]:
 
-לאחר חיפושים, מגיע רגע בו [[לנרט|https://www.imdb.com/name/nm0001295/?ref_=ttfc_fc_cl_t28]], השמאן האינדיאני האזורי ב//חשיפה לצפון//, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה [[חבל&quot;ז שוכ&quot;ו ק&quot;ר]], שלא לדבר על זה שאחרי 12 עונות של [[האנטומיה של גריי]] אני כשיר להיות רופא מנתח.
+לאחר חיפושים, מגיע רגע בו [[לאונרד|https://www.imdb.com/name/nm0001295/?ref_=ttfc_fc_cl_t28]], השמאן האינדיאני האזורי ב//חשיפה לצפון//, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה [[חבל&quot;ז שוכ&quot;ו ק&quot;ר]], שלא לדבר על זה שאחרי 12 עונות של [[האנטומיה של גריי]] אני כשיר להיות רופא מנתח.
 
 
 &lt;&lt;list-links filter:&quot;[tag[סדרות]]&quot;&gt;&gt;
@@ -14821,7 +14845,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20171219115813335" modified="20180227132503209" tags="[[אחיות חוץ]]" title="סטיב בושמי">
+<div created="20171219115813335" modified="20190126104142768" tags="[[אחיות חוץ]] סרטים" title="סטיב בושמי">
 <pre>[img[pictures/steve-buscemi.jpg]]
 
 !!![[יויו]]:
@@ -14984,7 +15008,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * יוצקים שמן זית ובוזקים מלח ים גס.
 * מערבבים בעדינות ומגישים, וזה גם נשמר כמה ימים במקרר.</pre>
 </div>
-<div created="20170814193959289" modified="20170814213942858" tags="[[אחיות חוץ]]" title="ספייק לי">
+<div created="20170814193959289" modified="20190204183033195" tags="[[אחיות חוץ]] סרטים" title="ספייק לי">
 <pre>[img[pictures/spike-lee.jpg]]
 
 !!![[גורה]]:
@@ -15000,6 +15024,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 3. [[עשה את הדבר הנכון|http://www.imdb.com/title/tt0097216/?ref_=nmbio_mbio]]
 
 4. [[השעה ה-25|http://www.imdb.com/title/tt0307901/]]
+
+5. [[שחור על לבן|סרטים]]
 
 </pre>
 </div>
@@ -15018,6 +15044,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מועילה מאד החשיבה [[האלכסנדרונית|שיטת אלכסנדר]], להפחתת נזקי קשיחות [[הטכניקות הקשוחות|איזדורה דאנקן]].
 
 </pre>
+</div>
+<div created="20190126100956225" modified="20190204183629283" tags="חבר [[סיפורים אמיתיים]]" title="סרטים">
+<pre>[img[pictures/sratim.jpg]]
+
+!!![[יויו]]:
+
+[[הסרט|https://he.wikipedia.org/wiki/%D7%A7%D7%95%D7%9C%D7%A0%D7%95%D7%A2]] הכי טוב שראיתי בזמן האחרון הוא [[שחור על לבן|https://www.imdb.com/title/tt7349662/]] של [[ספייק לי]]. זה קרה לפני שבועיים בערך ואני עדיין נזכר בו פה ושם ומתמוגג. כעת פברואר 2019. הכל משתנה כל הזמן. אתה יכול שיהיה לך מסך ענקי ומערכת סאונד מטורפת ולצלול בכיף לגמרי במיטה שלך ולעוף.
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[סרטים]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20170815164314386" modified="20180605131908325" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים" title="עוגות תאנים">
 <pre>[img[pictures/ugat-teenim.jpg]]
@@ -15879,12 +15916,12 @@ __אופן ההכנה____
 *לאפות ב-170 מעלות 40-50 דקות., עד שהבצק זהוב.
 </pre>
 </div>
-<div created="20170714125945456" modified="20170714141111287" tags="סדרות" title="פארגו">
+<div created="20170714125945456" modified="20190126104639177" tags="סדרות סרטים" title="פארגו">
 <pre>[img[pictures/fargo.jpg]]
 
 !!![[יויו]]:
 
-זה לא [[שזו|https://www.youtube.com/watch?v=KQb00kKRA08]] הסצנה הכי טובה בשלוש עונות מצויינות מכל בחינה של פארגו, ובעצם אי אפשר לבחור מה הכי, אבל אפשר להגיד שרצח בינות לעצים ורציחות בכלל, קורות שם.
+זה לא [[שזו|https://www.youtube.com/watch?v=KQb00kKRA08]] הסצנה הכי טובה בשלוש עונות מצויינות מכל בחינה של פארגו, שהיא סוג של טייק על [[פארגו הסרט|https://www.imdb.com/title/tt0116282/]] של האחים כהן, ובעצם אי אפשר לבחור מה הכי, אבל אפשר להגיד שרצח בינות לעצים ורציחות בכלל, קורות שם.
 
 </pre>
 </div>
@@ -15918,7 +15955,7 @@ __אופן ההכנה____
 
 וכולם נהנים מאד.</pre>
 </div>
-<div created="20180201131829444" modified="20181020121014754" tags="[[אחיות חוץ]] אימהות" title="פדרו אלמודובר">
+<div created="20180201131829444" modified="20190126104250215" tags="[[אחיות חוץ]] אימהות סרטים" title="פדרו אלמודובר">
 <pre>[img[pictures/pedro-almodovar.jpg]]
 
 !!![[גורה]]:
@@ -16119,7 +16156,7 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170417192958980" modified="20180227104029422" tags="[[אחיות חוץ]]" title="פיליפ סימור הופמן">
+<div created="20170417192958980" modified="20190126104712750" tags="[[אחיות חוץ]] סרטים" title="פיליפ סימור הופמן">
 <pre>[img[pictures/Philip-Seymour-Hoffman.jpg]]
 
 !!![[יויו]]:
@@ -16266,7 +16303,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20181021143810622" modified="20181021150456298" tags="[[אחיות חוץ]] מוזיקה" title="פרינס">
+<div created="20181021143810622" modified="20190126104735575" tags="[[אחיות חוץ]] מוזיקה סרטים" title="פרינס">
 <pre>[img[pictures/prince.jpg]]
 
 !!![[הצוות]]:
@@ -16347,10 +16384,10 @@ Fapina''
 הוא בן יחיד, הוא מסיים השנה תואר שני בסטטיסטיקה, 
 הוא שולט ברזי המרשתת, הוא מתגורר בדירת חדר שקנה ושיפץ, לא רחוק מאיתנו.</pre>
 </div>
-<div created="20170423212318190" modified="20170423212516461" tags="[[אחיות חוץ]]" title="צ'רלי קאופמן">
+<div created="20170423212318190" modified="20190126104817477" tags="[[אחיות חוץ]] סרטים" title="צ'רלי קאופמן">
 <pre>[img[pictures/charlie-kaufman.jpg]]
 
-[[התסריטאי והבמאי|https://he.wikipedia.org/wiki/%D7%A6%27%D7%90%D7%A8%D7%9C%D7%99_%D7%A7%D7%90%D7%95%D7%A4%D7%9E%D7%9F]]</pre>
+[[התסריטאי והבמאי|https://he.wikipedia.org/wiki/%D7%A6%27%D7%90%D7%A8%D7%9C%D7%99_%D7%A7%D7%90%D7%95%D7%A4%D7%9E%D7%9F]] הנערץ עלי.</pre>
 </div>
 <div created="20170602205356227" modified="20180405191605848" tags="[[אירי טוענת]]" title="צווארים">
 <pre>[img[pictures/zavarim.jpg]]
@@ -16877,6 +16914,13 @@ Fapina''
 
 
 [[רן יגיל|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]]</pre>
+</div>
+<div created="20190122074755075" modified="20190204184312161" tags="[[סיפורים אמיתיים]]" title="רקפות">
+<pre>[img[pictures/rakafot.jpg]]
+
+!!![[אימא של ג'אז]]:
+
+בחורף הגשום למדי, על האדמה הסלעית, מתחת לעצי האלון הגדולים, בין עלים יבשים, בלוטים, ספלולים, מקלות בגדלים שונים - [[צומחות לפלא רקפות נחמדות מאד|https://www.youtube.com/watch?v=jSyIEPBUsZo]].</pre>
 </div>
 <div created="20161213210419446" modified="20170608155740191" tags="[[אחות כהן]]" title="שאלון האחיות">
 <pre>[img[pictures/sheelon-haachayot.jpg]]
